--- a/notebooks/1_line_search_methods.ipynb
+++ b/notebooks/1_line_search_methods.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 73,
    "id": "25ae81dc",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 74,
    "id": "3ec4a43a",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 75,
    "id": "07e3a31f",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 76,
    "id": "3397ac27",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 77,
    "id": "84756ee9",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 78,
    "id": "5a144d57",
    "metadata": {},
    "outputs": [
@@ -211,10 +211,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution: [0.01042084]\n",
+      "Solution: [0.01042537]\n",
       "Number of iterations: 100\n",
-      "Derivative f'(x): [-4.52582281e-06]\n",
-      "Second derivative f''(x): -0.0013027733374620174\n"
+      "Derivative f'(x): [-4.53172149e-06]\n",
+      "Second derivative f''(x): -0.001303904877379888\n"
      ]
     }
    ],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 79,
    "id": "91f8de75",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 80,
    "id": "496fd917",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 81,
    "id": "b56449e2",
    "metadata": {},
    "outputs": [
@@ -334,8 +334,8 @@
      "text": [
       "Solution: [1. 1.]\n",
       "Number of iterations: 22111\n",
-      "Gradient of f(x, y): [9.95768800e-10 3.30357963e-10]\n",
-      "Eigenvalues of Hessian f(x,y): [1.00160064e+03 3.99360767e-01]\n"
+      "Gradient of f(x, y): [-1.60762337e-09  1.62816427e-09]\n",
+      "Eigenvalues of Hessian f(x,y): [1.00160064e+03 3.99360766e-01]\n"
      ]
     }
    ],
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 82,
    "id": "64140543",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
      "text": [
       "Solution: [1. 1.]\n",
       "Number of iterations: 23264\n",
-      "Gradient of f(x, y): [ 3.38917115e-10 -9.97846250e-10]\n",
+      "Gradient of f(x, y): [-2.28203634e-09  3.11306536e-10]\n",
       "Eigenvalues of Hessian f(x,y): [1.00160064e+03 3.99360768e-01]\n"
      ]
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 83,
    "id": "cbcb3d83",
    "metadata": {},
    "outputs": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 84,
    "id": "2adc91da",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 85,
    "id": "01da6fe6",
    "metadata": {},
    "outputs": [
@@ -523,10 +523,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution: [0.70710678 0.        ]\n",
+      "Solution: [0.70710679 0.        ]\n",
       "Number of iterations: 100000\n",
-      "Gradient of f(x, y): [-1.60728402e-08  0.00000000e+00]\n",
-      "Eigenvalues of Hessian f(x,y): [3.99999993 2.        ]\n"
+      "Gradient of f(x, y): [1.60728402e-08 0.00000000e+00]\n",
+      "Eigenvalues of Hessian f(x,y): [4.00000007 2.        ]\n"
      ]
     }
    ],
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 86,
    "id": "abe490cd",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
      "text": [
       "Solution: [0.70710678 0.        ]\n",
       "Number of iterations: 19\n",
-      "Gradient of f(x, y): [-1.17683641e-14  0.00000000e+00]\n",
+      "Gradient of f(x, y): [-5.99520433e-15  0.00000000e+00]\n",
       "Eigenvalues of Hessian f(x,y): [4. 2.]\n"
      ]
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 87,
    "id": "3587f8db",
    "metadata": {},
    "outputs": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 88,
    "id": "3aca2366",
    "metadata": {},
    "outputs": [
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 89,
    "id": "7e4bd3bd",
    "metadata": {},
    "outputs": [
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 90,
    "id": "dfd99afa",
    "metadata": {},
    "outputs": [
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 91,
    "id": "4d6e96ff",
    "metadata": {},
    "outputs": [
@@ -777,8 +777,8 @@
      "text": [
       "Solution: [0.81649658]\n",
       "Number of iterations: 6\n",
-      "Derivative f'(x): [1.45038929e-15]\n",
-      "Second derivative f''(x): 5.333333333333343\n"
+      "Derivative f'(x): [0.]\n",
+      "Second derivative f''(x): 5.333333333333334\n"
      ]
     }
    ],
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 92,
    "id": "9730d406",
    "metadata": {},
    "outputs": [
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 93,
    "id": "fa2943e8",
    "metadata": {},
    "outputs": [
@@ -867,7 +867,7 @@
      "text": [
       "Solution: [1. 1.]\n",
       "Number of iterations: 16\n",
-      "Gradient of f(x, y): [ 2.86881630e-13 -1.33226763e-13]\n",
+      "Gradient of f(x, y): [-0.  0.]\n",
       "Eigenvalues of Hessian f(x,y): [1.00160064e+03 3.99360767e-01]\n"
      ]
     }
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 94,
    "id": "f2048f17",
    "metadata": {},
    "outputs": [
@@ -915,7 +915,7 @@
      "text": [
       "Solution: [1. 1.]\n",
       "Number of iterations: 15\n",
-      "Gradient of f(x, y): [ 2.01838546e-13 -1.11022302e-13]\n",
+      "Gradient of f(x, y): [-0.  0.]\n",
       "Eigenvalues of Hessian f(x,y): [1.00160064e+03 3.99360767e-01]\n"
      ]
     }
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 95,
    "id": "34e39fdf",
    "metadata": {},
    "outputs": [
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 96,
    "id": "bb3b39f5",
    "metadata": {},
    "outputs": [
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 97,
    "id": "f37fac3d",
    "metadata": {},
    "outputs": [
@@ -1058,7 +1058,7 @@
      "text": [
       "Solution: [0.70710678 0.        ]\n",
       "Number of iterations: 6\n",
-      "Gradient of f(x, y): [4.10782519e-14 0.00000000e+00]\n",
+      "Gradient of f(x, y): [2.22044605e-16 0.00000000e+00]\n",
       "Eigenvalues of Hessian f(x,y): [4. 2.]\n"
      ]
     }
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 98,
    "id": "5476dbff",
    "metadata": {},
    "outputs": [
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 99,
    "id": "e087dbef",
    "metadata": {},
    "outputs": [
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 100,
    "id": "cbf2366b",
    "metadata": {},
    "outputs": [
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 101,
    "id": "27f9abd4",
    "metadata": {},
    "outputs": [
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 102,
    "id": "4ec5e25a",
    "metadata": {},
    "outputs": [
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 103,
    "id": "bbd7e3ae",
    "metadata": {},
    "outputs": [
@@ -1388,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 104,
    "id": "8353a5f1",
    "metadata": {},
    "outputs": [
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 105,
    "id": "241b5b5b",
    "metadata": {},
    "outputs": [
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 106,
    "id": "8368ca94",
    "metadata": {},
    "outputs": [
